# 66Bot

66Bot/: .env.prod  README.md  bot.py  docker-compose.yml  pyproject.toml
66Bot/66bot/plugins/sixsix/: __init__.py
66Bot/66bot/plugins/todayEat/: __init__.py  config.py  data_source.py  util.py
66Bot/66bot/plugins/todayEat/resource/: eating.json  food.json  greetings.json
66Bot/accounts/2187219487/: config.yml  device.json  session.token
66Bot/accounts/2187219487/data/: image.db  video.db
66Bot/accounts/2187219487/data/leveldb-v3/: 003639.ldb  003640.ldb  003641.ldb  003642.ldb  003643.ldb  003644.ldb  003646.ldb  003647.ldb  003705.ldb  LOG  MANIFEST-003703
66Bot/accounts/2187219487/data/voices/: 27037552-5CD3-BC79-977C-1303941760F9.amr  2723457C-1401-F1B3-F424-664D7A73D6E2.amr  5882E24A-7874-7684-5DD7-C04E05D3ABAF.amr  60EEDF86-562A-0FBD-84F6-1E077C7E69B4.amr  9500C4B3-C845-E0D2-C7D6-72257083E395.amr  B48BC0D4-D0AC-1A60-E179-D0932D3E4151.amr  BC12D537B7ADF15182E39B55AD01C797.amr  C79E7C6A-4353-301A-2B07-DA7BEE834684.amr  CDD8B593-1A96-41A7-9E36-98F55833B1D5.amr
66Bot/accounts/binary/: accounts.pkl
66Bot/data/bottle/: data.json
66Bot/your-path-to-resource/: eating.json  greetings.json
go-cqhttp/: config.yml  device.json  session.token
go-cqhttp/data/leveldb-v3/: LOG
sixBot/: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
