[tool.poetry]
name = "sixBot"
version = "0.1.0"
description = "sixBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_what2eat", "nonebot_plugin_apscheduler"]
plugin_dirs = ["sixbot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
